--- a/src/styles/mobile-sm.scss
+++ b/src/styles/mobile-sm.scss
@@ -1,17 +1,30 @@
 /* 576px min width sm*/
 @include media-breakpoint-up(sm) {
-
     html {
-        font-size: .8rem;
+        font-size: 1rem;
+        color: rgb(0,0,255);
+
     }
+    .navbar-brand {
+        display: block;
+        font-size: .8rem;
+        padding-left: 10px;
+
+    }
+
+   
     #holder {
         /*width: 400px;*/
         width: 100%;
     }
-    .navbar-brand {
-        display: none;
-    }
     .header-logo{
-        width:  70px;
+        width:  80px;
+        background-color:rgb(255, 162, 0);
     }
+   /* #descHold {
+        font-size: 1rem;
+        width: 400px;
+        height: 800px;
+
+    }*/
 }
