--- a/src/styles/tablet-md.scss
+++ b/src/styles/tablet-md.scss
@@ -2,7 +2,8 @@
 @include media-breakpoint-up(md) {
 
     html {
-        font-size: .7rem;
+        font-size: 1.1rem;
+        color: rgb(255,0,0);
     }
     #holder {
         /*width: 576px;*/
@@ -10,10 +11,19 @@
     }
     .navbar-brand {
         display: block;
-        font-size: 1.2rem;
+        font-size: 1rem;
         padding-left: 10px;
+
+       
     }
     .header-logo{
         width:  100px;
+        background-color:rgb(238, 238, 42);
+
     }
+   /* #descHold {
+        font-size: 1rem;
+        width: 400px;
+
+    }*/
 }
