fixed  header menu sizes for devices

--- a/src/styles/desk-xl.scss
+++ b/src/styles/desk-xl.scss
@@ -18,7 +18,8 @@
 
     }
     .header-logo{
-        width:  140px;
+        width:  100px;
+        padding: 0px;
     }
     #descHold {
         margin-left: auto;
