--- a/src/styles/mobile-sm.scss
+++ b/src/styles/mobile-sm.scss
@@ -10,7 +10,10 @@
         padding-left: 10px;
 
     }
-
+    .nav-link{
+        padding: .5rem .6rem;
+        font-size: .6rem;
+    }
    
     #holder {
         /*width: 400px;*/
@@ -18,7 +21,7 @@
        width: 576px;
     }
     .header-logo{
-        width:  80px;
+        width:  70px;
     }
 
     #logo-intro {
