--- a/src/styles/mobile-xs.scss
+++ b/src/styles/mobile-xs.scss
@@ -183,11 +183,14 @@
     }
 
     .header-logo {
-        width: 70px;
+        width: 60px;
+        padding: 5px !important;
+        /*
         margin: 10%;
         padding-right: 20%;
+        */
     }
-
+   
     .head-space {
         height: 130px;
     }
@@ -210,13 +213,9 @@
         position: relative;
         display: block;
         height: 700vh;
-        //width: 100%;
         width: 350px;
-        /*width: 1200px;*/
         padding: 0;
         z-index: 10;
-        //overflow-x: hidden;
-
     }
 
     #logo-holder {
@@ -224,42 +223,14 @@
     }
 
     #bigLogoHolder {
-        width: 100%;
-        height: 100%;
-    }
-
-    #myLogo {
+        position: absolute;
         background-image: url('../img/THR_Logo_knockout2.png');
-        background-size: 50%;
+        background-size: 60%;
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
         width: 100%;
         height: 100%;
-        position: absolute;
-        left: 0;
-        opacity: 0;
-        display: block;
-        z-index: 900;
-    }
-
-    .my-logo {
-        width: 100%;
-        height: 100%;
-
-        z-index: 40;
-        left: 0;
-        top: 0;
-        position: absolute;
-    }
-
-    #bigLogoHolder {
-        position: absolute;
-        background-image: url('../img/THR_Logo_knockout2.png');
-        background-size: 70%;
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
     }
 
     #cityscape {
@@ -274,7 +245,6 @@
 
     #logo-intro {
         position: absolute;
-        //width: 345px;
         width: 100%;
         height: 100%;
         z-index: 10;
@@ -552,16 +522,11 @@
 
    
 }
-    
+    /*
     html {
         font-size: .9rem;
     }
-    
+    */
   
-    .header-logo{
-        width:  50px;
-        margin: 10%;
-        padding-right: 20%;
-    
-    }
+   
      
