fix menu font sizes per device

--- a/src/styles/desk-lg.scss
+++ b/src/styles/desk-lg.scss
@@ -11,7 +11,10 @@
         font-size: 1.2rem;
         padding-left: 10px;
     }
-
+    .nav-link{
+        padding: .5rem .8rem;
+        font-size: .8rem;
+    }
     #descHold {
         margin-left: auto;
         width: 400px;
