--- a/src/styles/desk-xl.scss
+++ b/src/styles/desk-xl.scss
@@ -15,7 +15,10 @@
         display: block;
         font-size: 1.4rem;
         padding-left: 10px;
-
+    }
+    .nav-link{
+        padding: .5rem .9rem;
+        font-size: .9rem;
     }
     .header-logo{
         width:  100px;
