--- a/src/styles/tablet-md.scss
+++ b/src/styles/tablet-md.scss
@@ -13,8 +13,10 @@
         display: block;
         font-size: 1rem;
         padding-left: 10px;
-
-       
+    }
+    .nav-link{
+        padding: .5rem .7rem;
+        font-size: .7rem;
     }
     .header-logo{
         width:  80px;
